--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,14 @@ appdirs==1.4.3            # via openstacksdk
 asn1crypto==0.24.0        # via cryptography
 astroid==1.6.5            # via pylint
 autopep8==1.4.3
-awscli==1.16.81
+awacs==0.8.1
+awscli==1.16.82
 backports.functools-lru-cache==1.5  # via astroid, pylint
+bcdoc==0.16.0
 bcrypt==3.1.5             # via paramiko
-boto3==1.9.71
+boto3==1.9.72
 boto==2.49.0
-botocore==1.12.71
+botocore==1.12.72
 certifi==2018.11.29       # via requests
 cffi==1.11.5              # via bcrypt, cryptography, pynacl
 chardet==3.0.4            # via requests
@@ -27,9 +29,10 @@ colour==0.1.5             # via ansible-playbook-grapher
 configparser==3.5.0       # via pylint
 cryptography==2.4.2       # via ansible, openstacksdk, paramiko
 decorator==4.3.0          # via openstacksdk
-docutils==0.14            # via awscli, botocore
+docutils==0.14            # via awscli, bcdoc, botocore
 dogpile.cache==0.6.8      # via openstacksdk
 enum34==1.1.6             # via astroid, cryptography
+functools32==3.2.3.post2  # via jsonschema
 futures==3.2.0            # via isort, openstacksdk, s3transfer
 graphviz==0.8.1           # via ansible-playbook-grapher
 idna==2.8                 # via cryptography, requests
@@ -41,6 +44,7 @@ jinja2==2.10              # via ansible, ansigenome, jinja2-cli
 jmespath==0.9.3           # via boto3, botocore, openstacksdk
 jsonpatch==1.23           # via openstacksdk
 jsonpointer==2.0          # via jsonpatch
+jsonschema==2.6.0
 keystoneauth1==3.11.2     # via openstacksdk
 lazy-object-proxy==1.3.1  # via astroid
 lxml==4.1.1               # via ansible-playbook-grapher
@@ -49,13 +53,14 @@ mccabe==0.6.1             # via pylint
 mitogen==0.2.3
 munch==2.3.2              # via openstacksdk
 netaddr==0.7.19
-netifaces==0.10.8         # via openstacksdk
+netifaces==0.10.9         # via openstacksdk
 openstacksdk==0.22.0      # via os-client-config, shade
 os-client-config==1.31.2  # via shade
 os-service-types==1.4.0   # via keystoneauth1, openstacksdk
 paramiko==2.4.2           # via ansible
 pathspec==0.5.9           # via yamllint
 pbr==5.1.1                # via keystoneauth1, openstacksdk, os-service-types, shade, stevedore
+pep8==1.7.1
 pretty==0.1
 pyaml==18.11.0
 pyasn1==0.4.5             # via paramiko, rsa
@@ -65,8 +70,8 @@ pylint==1.9.4
 pynacl==1.3.0             # via paramiko
 python-dateutil==2.7.5    # via botocore
 python-slugify==2.0.0
-pyyaml==3.13              # via ansible, ansible-lint, ansigenome, awscli, jinja2-cli, openstacksdk, pyaml, yamllint
-requests==2.21.0          # via keystoneauth1
+pyyaml==3.13              # via ansible, ansible-lint, ansigenome, awscli, jinja2-cli, openstacksdk, pyaml, yamllint, yamlreader
+requests==2.21.0
 requestsexceptions==1.4.0  # via openstacksdk
 rsa==3.4.2                # via awscli
 s3transfer==0.1.13        # via awscli, boto3
@@ -79,4 +84,5 @@ unidecode==1.0.23         # via python-slugify
 urllib3==1.24.1           # via botocore, requests
 wrapt==1.10.11            # via astroid
 yamllint==1.13.0
+yamlreader==3.0.4
 yolk3k==0.9
