--- a/requirements.txt
+++ b/requirements.txt
@@ -80,6 +80,7 @@ simplejson==3.16.0
 singledispatch==3.4.0.3   # via astroid, pylint
 six==1.12.0
 stevedore==1.30.0         # via keystoneauth1
+subprocess32==3.5.3
 unidecode==1.0.23         # via python-slugify
 urllib3==1.24.1           # via botocore, requests
 wrapt==1.10.11            # via astroid
