--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,7 @@ retry_files_enabled = False
 # stdout_callback = debug
 callback_whitelist = actionable, profile_tasks, profile_roles, skippy, debug, unixy, actionable
 stdout_callback = debug
+library = ./library
 
 # NOTE: Enabling pipelining reduces the number of SSH operations required to execute a module on the remote server, by executing many ansible modules without actual file transfer. This can result in a very significant performance improvement when enabled, however when using “sudo:” operations you must first disable ‘requiretty’ in /etc/sudoers on all managed hosts.
 pipelining = True
