--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,7 @@ ansible>=2.5,<2.6
 yolk3k
 ansible-lint
 pyaml
+PyYAML
 autopep8
 mitogen
 yamllint
@@ -29,3 +30,4 @@ pep8
 requests
 yamlreader
 subprocess32
+openshift
