--- a/requirements.txt
+++ b/requirements.txt
@@ -4,48 +4,54 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+adal==1.2.1               # via kubernetes
 ansible-inventory-grapher==2.4.5
-ansible-lint==4.0.0
+ansible-lint==4.0.1
 ansible-playbook-grapher==0.7.3
 ansible==2.5.14
 ansigenome==0.6.0
 appdirs==1.4.3            # via openstacksdk
 asn1crypto==0.24.0        # via cryptography
 astroid==1.6.5            # via pylint
+attrs==18.2.0             # via jsonschema
 autopep8==1.4.3
-awacs==0.8.1
-awscli==1.16.82
+awacs==0.8.2
+awscli==1.16.96
 backports.functools-lru-cache==1.5  # via astroid, pylint
 bcdoc==0.16.0
-bcrypt==3.1.5             # via paramiko
-boto3==1.9.72
+bcrypt==3.1.6             # via paramiko
+boto3==1.9.86
 boto==2.49.0
-botocore==1.12.72
-certifi==2018.11.29       # via requests
+botocore==1.12.86
+cachetools==3.1.0         # via google-auth
+certifi==2018.11.29       # via kubernetes, requests
 cffi==1.11.5              # via bcrypt, cryptography, pynacl
 chardet==3.0.4            # via requests
 colorama==0.3.9           # via awscli
 colour==0.1.5             # via ansible-playbook-grapher
-configparser==3.5.0       # via pylint
-cryptography==2.4.2       # via ansible, openstacksdk, paramiko
-decorator==4.3.0          # via openstacksdk
+configparser==3.7.1       # via pylint
+cryptography==2.5         # via adal, ansible, openstacksdk, paramiko
+decorator==4.3.2          # via dogpile.cache, openstacksdk
+dictdiffer==0.7.1         # via openshift
 docutils==0.14            # via awscli, bcdoc, botocore
-dogpile.cache==0.6.8      # via openstacksdk
+dogpile.cache==0.7.1      # via openstacksdk
 enum34==1.1.6             # via astroid, cryptography
 functools32==3.2.3.post2  # via jsonschema
 futures==3.2.0            # via isort, openstacksdk, s3transfer
+google-auth==1.6.2        # via kubernetes
 graphviz==0.8.1           # via ansible-playbook-grapher
-idna==2.8                 # via cryptography, requests
-ipaddress==1.0.22         # via cryptography, openstacksdk
+idna==2.8                 # via requests
+ipaddress==1.0.22         # via cryptography, kubernetes, openstacksdk
 iso8601==0.1.12           # via keystoneauth1, openstacksdk
 isort==4.3.4
 jinja2-cli[yaml]==0.6.0
-jinja2==2.10              # via ansible, ansigenome, jinja2-cli
+jinja2==2.10              # via ansible, ansigenome, jinja2-cli, openshift
 jmespath==0.9.3           # via boto3, botocore, openstacksdk
 jsonpatch==1.23           # via openstacksdk
 jsonpointer==2.0          # via jsonpatch
-jsonschema==2.6.0
+jsonschema==3.0.0b3
 keystoneauth1==3.11.2     # via openstacksdk
+kubernetes==8.0.1         # via openshift
 lazy-object-proxy==1.3.1  # via astroid
 lxml==4.1.1               # via ansible-playbook-grapher
 markupsafe==1.1.0         # via jinja2
@@ -54,26 +60,35 @@ mitogen==0.2.3
 munch==2.3.2              # via openstacksdk
 netaddr==0.7.19
 netifaces==0.10.9         # via openstacksdk
-openstacksdk==0.22.0      # via os-client-config, shade
+oauthlib==3.0.1           # via requests-oauthlib
+openshift==0.8.4
+openstacksdk==0.23.0      # via os-client-config, shade
 os-client-config==1.31.2  # via shade
-os-service-types==1.4.0   # via keystoneauth1, openstacksdk
+os-service-types==1.5.0   # via keystoneauth1, openstacksdk
 paramiko==2.4.2           # via ansible
 pathspec==0.5.9           # via yamllint
 pbr==5.1.1                # via keystoneauth1, openstacksdk, os-service-types, shade, stevedore
 pep8==1.7.1
 pretty==0.1
 pyaml==18.11.0
-pyasn1==0.4.5             # via paramiko, rsa
-pycodestyle==2.4.0        # via autopep8
+pyasn1-modules==0.2.4     # via google-auth
+pyasn1==0.4.5             # via paramiko, pyasn1-modules, rsa
+pycodestyle==2.5.0        # via autopep8
 pycparser==2.19           # via cffi
+pyjwt==1.7.1              # via adal
 pylint==1.9.4
 pynacl==1.3.0             # via paramiko
-python-dateutil==2.7.5    # via botocore
-python-slugify==2.0.0
-pyyaml==3.13              # via ansible, ansible-lint, ansigenome, awscli, jinja2-cli, openstacksdk, pyaml, yamllint, yamlreader
+pyrsistent==0.14.9        # via jsonschema
+python-dateutil==2.7.5    # via adal, botocore, kubernetes
+python-slugify==2.0.1
+python-string-utils==0.6.0  # via openshift
+pyyaml==3.13
+requests-oauthlib==1.2.0  # via kubernetes
 requests==2.21.0
 requestsexceptions==1.4.0  # via openstacksdk
-rsa==3.4.2                # via awscli
+rsa==3.4.2                # via awscli, google-auth
+ruamel.ordereddict==0.4.13  # via ruamel.yaml
+ruamel.yaml==0.15.87      # via openshift
 s3transfer==0.1.13        # via awscli, boto3
 shade==1.30.0
 simplejson==3.16.0
@@ -82,8 +97,9 @@ six==1.12.0
 stevedore==1.30.0         # via keystoneauth1
 subprocess32==3.5.3
 unidecode==1.0.23         # via python-slugify
-urllib3==1.24.1           # via botocore, requests
-wrapt==1.10.11            # via astroid
-yamllint==1.13.0
+urllib3==1.24.1           # via botocore, kubernetes, requests
+websocket-client==0.54.0  # via kubernetes
+wrapt==1.11.1             # via astroid
+yamllint==1.14.0
 yamlreader==3.0.4
 yolk3k==0.9
