--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,6 @@ ansigenome==0.6.0
 appdirs==1.4.3            # via openstacksdk
 asn1crypto==0.24.0        # via cryptography
 astroid==1.6.5            # via pylint
-attrs==18.2.0             # via jsonschema
 autopep8==1.4.3
 awacs==0.8.2
 awscli==1.16.96
@@ -49,7 +48,7 @@ jinja2==2.10              # via ansible, ansigenome, jinja2-cli, openshift
 jmespath==0.9.3           # via boto3, botocore, openstacksdk
 jsonpatch==1.23           # via openstacksdk
 jsonpointer==2.0          # via jsonpatch
-jsonschema==3.0.0b3
+jsonschema==2.6.0
 keystoneauth1==3.11.2     # via openstacksdk
 kubernetes==8.0.1         # via openshift
 lazy-object-proxy==1.3.1  # via astroid
@@ -78,7 +77,6 @@ pycparser==2.19           # via cffi
 pyjwt==1.7.1              # via adal
 pylint==1.9.4
 pynacl==1.3.0             # via paramiko
-pyrsistent==0.14.9        # via jsonschema
 python-dateutil==2.7.5    # via adal, botocore, kubernetes
 python-slugify==2.0.1
 python-string-utils==0.6.0  # via openshift
