--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,7 +5,7 @@ inventory      = inventory.ini
 nocows=True
 retry_files_enabled = False
 # stdout_callback = debug
-callback_whitelist = actionable, profile_tasks, profile_roles, skippy, debug, unixy, actionable
+callback_whitelist = actionable, profile_tasks, profile_roles, skippy, debug, unixy, actionable, custom
 stdout_callback = debug
 library = ./library
 
