--- a/get_k8_facts.yml
+++ b/get_k8_facts.yml
@@ -5,12 +5,20 @@
   become_method: sudo
   # serial: True
   pre_tasks:
-  - name: ping all machines
-    ping:
+  # - name: ping all machines
+  #   ping:
 
-- name: Search for all running pods
-  kube_facts:
-    kind: Pod
-    field_selectors:
-      - status.phase = running
-  kubeconfig: ~/dev/bossjones/kubernetes-cluster/borg-admin.conf
+  - debug: msg="{{ lookup('env','KUBECONFIG') }} is an environment variable"
+
+  - name: Search for all running pods
+    kube_facts:
+      name: web
+      kind: Pod
+      namespace: kube-system
+      # field_selectors:
+      #   - status.phase = running
+      # kubeconfig: "{{ lookup('env','KUBECONFIG') }}"
+      kubeconfig: "~/dev/bossjones/kubernetes-cluster/borg-admin.conf"
+    register: web_Service
+
+# eg: ~/dev/bossjones/kubernetes-cluster/borg-admin.conf
