--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -29,8 +29,10 @@ cookiecutter==1.6.0       # via molecule
 cryptography==2.5         # via ansible, paramiko
 docker-py==1.10.6
 docker-pycreds==0.4.0     # via docker-py
+docopt==0.6.2             # via ptpython
 docutils==0.14            # via awscli, botocore
 enum34==1.1.6             # via cryptography, flake8
+fancycompleter==0.8       # via pdbpp
 fasteners==0.14.1         # via python-gilt
 flake8==3.5.0             # via molecule
 funcsigs==1.0.2           # via pytest
@@ -39,6 +41,7 @@ futures==3.2.0            # via s3transfer
 git-url-parse==1.1.0      # via python-gilt
 idna==2.8                 # via requests
 ipaddress==1.0.22         # via cryptography, docker-py
+jedi==0.13.2              # via ptpython
 jinja2-time==0.2.0        # via cookiecutter
 jinja2==2.10              # via ansible, click-completion, cookiecutter, jinja2-time, molecule
 jmespath==0.9.3           # via botocore
@@ -48,13 +51,17 @@ molecule==2.18.1
 monotonic==1.5            # via fasteners
 more-itertools==5.0.0     # via pytest
 paramiko==2.4.2           # via ansible
+parso==0.3.2              # via jedi
 pathlib2==2.3.3           # via pytest
 pathspec==0.5.9           # via yamllint
 pbr==4.1.0                # via git-url-parse, molecule, python-gilt
+pdbpp==0.9.3
 pexpect==4.6.0            # via molecule
 pluggy==0.8.1             # via pytest
 poyo==0.4.2               # via cookiecutter
+prompt-toolkit==2.0.8     # via ptpython
 psutil==5.4.6             # via molecule
+ptpython==2.0.4
 ptyprocess==0.6.0         # via pexpect
 py==1.7.0                 # via pytest
 pyaml==18.11.0
@@ -62,7 +69,9 @@ pyasn1==0.4.5             # via paramiko, rsa
 pycodestyle==2.3.1        # via flake8
 pycparser==2.19           # via cffi
 pyflakes==1.6.0           # via flake8
+pygments==2.3.1           # via pdbpp, ptpython
 pynacl==1.3.0             # via paramiko
+pyrepl==0.8.4             # via fancycompleter
 pytest==4.1.1             # via testinfra
 python-dateutil==2.7.5    # via arrow, botocore
 python-gilt==1.2.1        # via molecule
@@ -72,11 +81,13 @@ rsa==3.4.2                # via awscli
 s3transfer==0.1.13        # via awscli
 scandir==1.9.0            # via pathlib2
 sh==1.12.14               # via molecule, python-gilt
-six==1.11.0               # via ansible-lint, bcrypt, click-completion, cryptography, docker-py, docker-pycreds, fasteners, molecule, more-itertools, pathlib2, pynacl, pytest, python-dateutil, testinfra, websocket-client
+six==1.11.0               # via ansible-lint, bcrypt, click-completion, cryptography, docker-py, docker-pycreds, fasteners, molecule, more-itertools, pathlib2, prompt-toolkit, pynacl, pytest, python-dateutil, testinfra, websocket-client
 tabulate==0.8.2           # via molecule
 testinfra==1.14.1         # via molecule
 tree-format==0.1.2        # via molecule
 urllib3==1.24.1           # via botocore, requests
+wcwidth==0.1.7            # via prompt-toolkit
 websocket-client==0.54.0  # via docker-py
 whichcraft==0.5.2         # via cookiecutter
+wmctrl==0.3               # via pdbpp
 yamllint==1.11.1          # via molecule
