wip:debugging kube_facts, still cant find openshift bin for some reason

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 
-roles_path     = ./:./roles:/etc/ansible/roles
+roles_path     = ./:./extra_playbooks/roles:./roles:/etc/ansible/roles
 inventory      = inventory.ini
 nocows=True
 retry_files_enabled = False
